Unit conversion in data fields doesn't work #65731

Closed
opened 2019-06-11 19:05:23 +02:00 by Steve Warner · 8 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.71

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: 030c7df19d
Worked: (optional)

Short description of error
If you're working in Imperial units, typing a metric number (i.e. 10m) into the Dimensions field will not set the object to 10 meters. The scale will be far off. In order to get the scale correct, you have to switch the Unit System back to Metric, then enter your dimensions in metric, then switch back to Imperial.

Exact steps for others to reproduce the error
Start with the default scene
Set the Unit System to Imperial
Select the default Cube
Go to the Numeric (N) panel and set the Dimensions for the X axis to 10m. Then press enter.
The X dimension will go to 52,800'. This is 16093.44 meters, so something is wrong in the math.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.71 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-09 21:43, hash: `030c7df19d` Worked: (optional) **Short description of error** If you're working in Imperial units, typing a metric number (i.e. 10m) into the Dimensions field will not set the object to 10 meters. The scale will be far off. In order to get the scale correct, you have to switch the Unit System back to Metric, then enter your dimensions in metric, then switch back to Imperial. **Exact steps for others to reproduce the error** Start with the default scene Set the Unit System to Imperial Select the default Cube Go to the Numeric (N) panel and set the Dimensions for the X axis to 10m. Then press enter. The X dimension will go to 52,800'. This is 16093.44 meters, so something is wrong in the math.
Author

Added subscriber: @stevewarner

Added subscriber: @stevewarner

Added subscribers: @JacquesLucke, @ideasman42, @mont29

Added subscribers: @JacquesLucke, @ideasman42, @mont29

"m" is used both for "meter" and as a short for "mi" ("miles"). Has been that way since the first commit of units support in Blender it'd seem.

I’d assume when you are in imperial system, you have to type meters for this to work properly. that, or we remove support of 'm' as shortcut for miles. @ideasman42, @JacquesLucke, you worked on this recently, any preference?

"m" is used both for "meter" and as a short for "mi" ("miles"). Has been that way since the first commit of units support in Blender it'd seem. I’d assume when you are in imperial system, you have to type `meters` for this to work properly. that, or we remove support of 'm' as shortcut for miles. @ideasman42, @JacquesLucke, you worked on this recently, any preference?

I think the way it's working now is basically correct.

As @mont29 says, from: https://en.wikipedia.org/wiki/Mile mile is sometimes abbreviated to m, it's often abbreviated to mi to avoid confusion with meters.

Think it's fine if we do the same.

I think the way it's working now is basically correct. As @mont29 says, from: https://en.wikipedia.org/wiki/Mile mile is sometimes abbreviated to `m`, it's often abbreviated to `mi` to avoid confusion with meters. Think it's fine if we do the same.
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

You should definitely remove “m” as a shortcut for mile to remove this collision.

You should definitely remove “m” as a shortcut for mile to remove this collision.

This issue was referenced by 934b3c74f3

This issue was referenced by 934b3c74f328c8942eef9a5cf1219cca3ad46cd0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65731
No description provided.